--- a/src/components/ui/custom-button/CustomButton.scss
+++ b/src/components/ui/custom-button/CustomButton.scss
@@ -23,6 +23,7 @@
     &.google-sign-in {
         background-color: #4285f4;
         color: white;
+        border: none;
 
         &:hover {
             background-color: #357ae8;
