--- a/src/components/ui/collection-item/CollectionItem.scss
+++ b/src/components/ui/collection-item/CollectionItem.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     height: 350px;
     align-items: center;
+    position: relative;
 
     .image {
         width: 100%;
@@ -11,6 +12,14 @@
         background-size: cover;
         background-position: center;
         margin-bottom: 5px;
+    }
+
+    .custom-button {
+        width: 80%;
+        position: absolute;
+        opacity: 0.7;
+        display: none;
+        top: 255px;
     }
 
     .collection-footer {
@@ -27,6 +36,17 @@
 
         .price {
             width: 10%;
+        }
+    }
+
+    &:hover {
+        .image {
+            opacity: 0.8;
+        }
+
+        .custom-button {
+            opacity: 0.85;
+            display: flex;
         }
     }
 }
