--- a/src/components/ui/cartDropDown/CartDropDown.scss
+++ b/src/components/ui/cartDropDown/CartDropDown.scss
@@ -11,6 +11,12 @@
     right: 40px;
     z-index: 5;
 
+
+    .empty-message {
+        font-size: 1.4rem;
+        margin: 4rem auto;
+    }
+
     .cart-items {
         height: 240px;
         display: flex;
@@ -21,4 +27,6 @@
     button {
         margin-top: auto;
     }
+
+
 }
